# NYCU_LLM

./: .gitignore  README.md  pyproject.toml
hw1/: LSTM.py  LSTM_README.md  RNN.py  hw1_1_111705068.ipynb  hw1_2_111705068.ipynb  n_gram_main.py  ngram_model.py
hw2/hw2-1/: hw2-1-111705068.ipynb  hw2_1.ipynb  hw2_1_111705068.ipynb  test.json  train.json  val.json
hw2/hw2-2/: Untitled5.ipynb  hw2-2.ipynb  hw2_2_111705068.ipynb  sample_submission.csv  test.csv
